<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <EditText
        android:id="@+id/usernameLoginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints="username"
        android:hint="@string/username_login_field"
        android:inputType="text"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordLoginField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:autofillHints="username"
        android:hint="@string/password_field_hint"
        android:inputType="textPassword"

        android:layout_marginTop="5dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLoginField" />

    <TextView
        android:id="@+id/toogleToSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="12sp"
        android:text="@string/toogle_to_signup"

        android:layout_marginTop="5dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLoginField" />

    <Button
        android:id="@+id/loginOrSignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/login_button"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toogleToSignup"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>