<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ChatActivity">

    <include
        android:id="@+id/chatActivityToolbar"
        layout="@layout/app_toolbar"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/chatIdField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/chat_id_field"
        android:autofillHints=""
        android:inputType="text"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chatActivityToolbar"/>



    <Button
        android:id="@+id/saveMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/save_message_button"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/messageField"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"

        android:hint="@string/message_field_hint"
        android:autofillHints=""
        android:inputType="textMultiLine"

        app:layout_constraintBottom_toTopOf="@+id/saveMessageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatIdField" />


</androidx.constraintlayout.widget.ConstraintLayout>